# nyx

./: .gitignore  CLAUDE.md  main.py  nyx.toml.example  pyproject.toml
specs/: MILESTONE_1.md  README.md  system-architecture.md
specs/research/: research-findings.md  research-links.md
specs/user-stories/: README.md  personas.md  us-01-task-management.md  us-02-shift-execution.md  us-03-episode-and-verification.md  us-04-model-routing.md  us-05-termination.md  us-06-reporting.md  us-07-monitoring.md
src/nyx/: __init__.py  cli.py
src/nyx/core/: __init__.py  config.py  events.py  orchestrator.py
src/nyx/execution/: __init__.py  runner.py  sandbox.py
src/nyx/execution/adapters/: __init__.py  agent_sdk.py  base.py  claude_cli.py  opencode.py
src/nyx/git/: __init__.py  worktrees.py
src/nyx/power/: __init__.py  manager.py
src/nyx/reporting/: __init__.py  reporter.py
src/nyx/routing/: __init__.py  router.py
src/nyx/tasks/: __init__.py  models.py  queue.py
src/nyx/verification/: __init__.py  engine.py
tests/: conftest.py
